--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>MoMo Transaction Analysis</h1>
 
-    <!-- <div class="cards">
+    <div class="cards">
       <div class="card">
         <h3>Total Transactions</h3>
         <p id="total-count">0</p>
@@ -19,7 +19,7 @@
         <h3>Total Amount</h3>
         <p id="total-amount">0 RWF</p>
       </div>
-    </div> -->
+    </div>
 
     <div class="controls">
       <select id="filter-type">
