--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="cards">
       <div class="card">
-        <h3>Total Transactions</h3>
+        <h3>Total Transaction</h3>
         <p id="total-count">0</p>
       </div>
       <div class="card">
