--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="cards">
       <div class="card">
-        <h3>Total Transaction</h3>
+        <h3>Total Transactions</h3>
         <p id="total-count">0</p>
       </div>
       <div class="card">
@@ -32,12 +32,10 @@
         <option value="cash_power">Cash Power</option>
         <option value="withdrawal">Withdrawals</option>
       </select>
-      <br>
       <select id="filter-name">
         <option value="all">All Names</option>
       </select>
     </div>
-    <br>
 
     <div class="chart-container">
       <canvas id="chart"></canvas>
